k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-group
spec:
  type: NodePort
  selector:
    app: user-group
  ports:
  - name: http
    port: 9000
    targetPort: 8000
